Выполнено задание №15
Реализованы тесты для добавления контакта в группу и удаления контакта из группы